[gd_scene load_steps=3 format=3 uid="uid://bom2kdm1dyawh"]

[ext_resource type="Script" path="res://Scenes/grid_helper.gd" id="1_ofsfp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3hun8"]
size = Vector2(16, 16)

[node name="GridHelper" type="Area2D"]
z_index = -1
collision_layer = 0
collision_mask = 15
script = ExtResource("1_ofsfp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_3hun8")

[node name="Panel" type="Panel" parent="."]
unique_name_in_owner = true
offset_right = 16.0
offset_bottom = 16.0
mouse_filter = 1

[connection signal="mouse_entered" from="Panel" to="." method="_on_panel_mouse_entered"]
[connection signal="mouse_exited" from="Panel" to="." method="_on_panel_mouse_exited"]
